--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,10 @@ dependencies {
 
     //coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6'
+
+    //swipeRefreshLayout
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
+    //MZ banner
+    implementation 'com.github.pinguo-zhouwei:MZBannerView:v2.0.2'
 }
