1.搭建请求框架完成

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,13 @@ dependencies {
 
     //MZ banner
     implementation 'com.github.pinguo-zhouwei:MZBannerView:v2.0.2'
+
+    //lifecycle
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+
+    //navigation
+    implementation 'androidx.navigation:navigation-fragment:2.1.0'
+    implementation 'androidx.navigation:navigation-ui:2.1.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0'
 }
