1.基础网络框架搭建

--- a/lib_ui/build.gradle
+++ b/lib_ui/build.gradle
@@ -56,5 +56,5 @@ dependencies {
 
     // Common 库
 //    api("com.github.WangJie0822.SampleProject:lib_base:1.0.1")
-    implementation(project(":lib_base"))
+    api project(":lib_base")
 }
