--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlinx-serialization'
 }
 
 android {
@@ -9,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.zysc.uniartsapp"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -47,17 +48,21 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    // Koin AndroidX
+    implementation "io.insert-koin:koin-android:$koin_version"
+
     // Koin AndroidX Scope feature
-    implementation "org.koin:koin-androidx-scope:$koin_version"
+    implementation "io.insert-koin:koin-androidx-scope:$koin_version"
 
     // Koin AndroidX ViewModel feature
-    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    implementation "io.insert-koin:koin-androidx-viewmodel:$koin_version"
 
     // Koin AndroidX Fragment Factory (unstable version)
-    implementation "org.koin:koin-androidx-fragment:$koin_version"
+    implementation "io.insert-koin:koin-androidx-fragment:$koin_version"
 
     // 依赖 base 库
-    implementation project(":lib_ui")
+    api project(":lib_ui")
+    api project(":lib_okhttp_interceptor")
 
     // 状态栏工具
     implementation "com.gyf.immersionbar:immersionbar:3.0.0"
@@ -66,4 +71,23 @@ dependencies {
     //ARouter 路由
     implementation "com.alibaba:arouter-api:1.5.1"
     implementation "com.alibaba:arouter-compiler:1.5.1"
+
+    //Serialization库
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-core-jvm:1.0.1"
+
+    //OkHttp + Retrofit
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation "com.squareup.okhttp3:okhttp-urlconnection:4.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
+
+    //Logger
+    implementation "com.orhanobut:logger:2.2.0"
+
+    //json
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1"
 }
