--- a/lib_okhttp_interceptor/build.gradle
+++ b/lib_okhttp_interceptor/build.gradle
@@ -1,29 +1,26 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
-    id 'kotlin-kapt'
 }
-
-group = "com.github.WangJie0822"
 
 android {
 
     // 编译 SDK 版本
-    compileSdkVersion 29
+    compileSdkVersion 30
 
     // 资源前缀
-    resourcePrefix("base")
+    resourcePrefix("okhttp")
 
     defaultConfig {
         // 最低支持版本
         minSdkVersion 21
         // 目标 SDK 版本
-        targetSdkVersion 29
+        targetSdkVersion 30
     }
 
     // 源文件路径设置
     sourceSets {
-        main {
+        main{
             java.srcDirs("src/main/java", "src/main/kotlin")
             jni.srcDirs("libs", "jniLibs")
         }
@@ -42,19 +39,9 @@ android {
 }
 
 dependencies {
-    // Kotlin 支持
-    implementation("org.jetbrains.kotlin:kotlin-stdlib:1.4.21")
-    // 协程
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.0")
+    // Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    // v4
-    implementation("androidx.legacy:legacy-support-v4:1.0.0")
-    // v7
-    implementation("androidx.appcompat:appcompat:1.2.0")
-    // RecyclerView
-    implementation("androidx.recyclerview:recyclerview:1.1.0")
-
-    // Common 库
-//    api("com.github.WangJie0822.SampleProject:lib_common:0.0.1")
-    api project(":lib_common")
+    // OkHttp
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
 }
