--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,10 @@ android {
 
 dependencies {
 
+    // 依赖 base 库
+    api project(":lib_ui")
+    api project(":lib_okhttp_interceptor")
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -49,31 +53,28 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     // Koin AndroidX
-    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "org.koin:koin-android:$koin_version"
 
     // Koin AndroidX Scope feature
-    implementation "io.insert-koin:koin-androidx-scope:$koin_version"
+    implementation "org.koin:koin-androidx-scope:$koin_version"
 
     // Koin AndroidX ViewModel feature
-    implementation "io.insert-koin:koin-androidx-viewmodel:$koin_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
     // Koin AndroidX Fragment Factory (unstable version)
-    implementation "io.insert-koin:koin-androidx-fragment:$koin_version"
-
-    // 依赖 base 库
-    api project(":lib_ui")
-    api project(":lib_okhttp_interceptor")
+    implementation "org.koin:koin-androidx-fragment:$koin_version"
 
     // 状态栏工具
     implementation "com.gyf.immersionbar:immersionbar:3.0.0"
     implementation "com.gyf.immersionbar:immersionbar-ktx:3.0.0"
 
     //ARouter 路由
-    implementation "com.alibaba:arouter-api:1.5.1"
-    implementation "com.alibaba:arouter-compiler:1.5.1"
+//    implementation "com.alibaba:arouter-api:1.5.1"
+//    annotationProcessor "com.alibaba:arouter-compiler:1.5.1"
 
     //Serialization库
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-core-jvm:1.0.1"
+//    implementation "org.jetbrains.kotlinx:kotlinx-serialization-core-jvm:1.0.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1"
 
     //OkHttp + Retrofit
     implementation "com.squareup.okhttp3:okhttp:4.9.0"
@@ -90,4 +91,10 @@ dependencies {
 
     //json
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1"
+
+    //协程
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.0"
+
+    //ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 }
