--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = "UniArtsApp"
 include(":app")
-include(":lib_ui",":lib_base",":lib_common")
+include(":lib_common",":lib_base",":lib_ui",":lib_okhttp_interceptor")
